--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility = "1.8"
+        targetCompatibility = "1.8"
+    }
+    buildToolsVersion = '28.0.3'
 
 }
 
@@ -29,15 +34,15 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.android.support:support-v4:28.0.0'
 
     def vav_version = "1.0.0"
     implementation "android.arch.navigation:navigation-fragment:$vav_version"
     implementation "android.arch.navigation:navigation-ui:$vav_version"
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
@@ -45,7 +50,7 @@ dependencies {
     implementation 'com.github.travijuu:numberpicker:1.0.7'
 
     /* Retrofit */
-    def retrofit_version = "2.3.0"
+    def retrofit_version = '2.8.1'
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 }
