Criação das camadas MVVM: --Address list on origin and destinate fields; --Feed fields from result activity with results; --Loading state implemented; --UX improvements;

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,26 +15,20 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCNKGzOEuoFSgonWsNMJ2MCgsKmJKqSjxs" />
+        <!-- <meta-data -->
+        <!-- android:name="com.google.android.geo.API_KEY" -->
+        <!-- android:value="AIzaSyCNKGzOEuoFSgonWsNMJ2MCgsKmJKqSjxs" /> -->
+
+        <activity android:name=".ui.activities.SplashScreenActivity" />
+
+        <activity android:name=".ui.activities.PlacesGeoActivity" />
 
         <activity android:name=".ui.activities.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".ui.activities.SplashScreenActivity">
-            <!--            <intent-filter>-->
-            <!--                <action android:name="android.intent.action.MAIN" />-->
-
-            <!--                <category android:name="android.intent.category.LAUNCHER" />-->
-            <!--            </intent-filter>-->
-        </activity>
-
     </application>
 
 </manifest>
