--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,16 +35,19 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.android.support:support-v4:28.0.0'
+    testImplementation 'junit:junit:4.13'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    /* Navigation */
     def vav_version = "1.0.0"
     implementation "android.arch.navigation:navigation-fragment:$vav_version"
     implementation "android.arch.navigation:navigation-ui:$vav_version"
 
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    /* Androidx */
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     /* NumberPicker */
     implementation 'com.github.travijuu:numberpicker:1.0.7'
@@ -53,4 +56,7 @@ dependencies {
     def retrofit_version = '2.8.1'
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+
+    /* Places */
+    implementation 'com.google.android.libraries.places:places:2.2.0'
 }
