--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,6 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
 
-
     defaultConfig {
         applicationId "br.com.antoniocgrande.truckpad_case"
         minSdkVersion 21
@@ -22,12 +21,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility = "1.8"
         targetCompatibility = "1.8"
     }
     buildToolsVersion = '28.0.3'
-
 }
 
 dependencies {
@@ -59,4 +58,5 @@ dependencies {
 
     /* Places */
     implementation 'com.google.android.libraries.places:places:2.2.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 }
